# nefit-client

./: .gitignore  Cargo.toml  README.md  README.tpl
.github/workflows/: nefit-client.yml
src/: client.rs  command.rs  communicator.rs  cryptor.rs  error.rs  lib.rs
tests/: test.rs
