[package]
name = "nefit-client"
version = "0.2.4"
edition = "2024"
rust-version = "1.85.0"
description = "Library for communicating with Bosch/Nefit thermostat API"
keywords = ["nefit", "automation", "gas", "energy", "api"]
categories = ["api-bindings", "network-programming", "hardware-support"]
authors = ["Pro <twisted.fall@gmail.com>"]
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/nefit-client"
repository = "https://github.com/twistedfall/nefit-client"
exclude = ["/.github", "/tools", ".gitignore", "release.toml", "rustfmt.toml"]

[badges]
maintenance = { status = "passively-maintained" }

[features]
buildtime-bindgen = ["libstrophe/buildtime_bindgen"]

[dependencies]
aes = "0.8"
anyhow = "1"
base64 = "0.22"
block-padding = "0.3"
chrono = { version = "0.4", features = ["serde"] }
ecb = "0.1"
httparse = "1"
libstrophe = { version = "0.20", default-features = false, features = ["libstrophe-0_9_3"] }
log = "0.4"
md-5 = "0.10"
percent-encoding = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
env_logger = "0.11"
